# massif-visualizer

./: .flatpak-manifest.json  .gitlab-ci.yml  .kateconfig  .kde-ci.yml  AUTHORS  CMakeLists.txt  INSTALL  Messages.sh  README  config.h.cmake  massif-visualizer.kdev4  snapcraft.yaml
app/: CMakeLists.txt  allocatorstab.cpp  allocatorstab.h  callgraphtab.cpp  callgraphtab.h  callgraphtab.qrc  callgraphtabui.rc  charttab.cpp  charttab.h  charttabui.rc  config.ui  configdialog.cpp  configdialog.h  documenttabinterface.cpp  documenttabinterface.h  documentwidget.cpp  documentwidget.h  documentwidgetui.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  massif-visualizer-settings.kcfg  massif-visualizer-settings.kcfgc  massif-visualizer.appdata.xml  massif-visualizer.desktop  massif-visualizer.qrc  massif-visualizerui.rc  massif.xml  org.kde.massif-visualizer.appdata.xml  org.kde.massif-visualizer.desktop  org.kde.massif_visualizer.appdata.xml
kdchart/src/: CMakeLists.txt  KDChartAbstractDiagram.cpp  KDChartAbstractDiagram_p.h  KDChartAbstractPolarDiagram_p.h  KDChartAttributesModel.cpp  KDChartBackgroundAttributes.cpp  KDChartCartesianCoordinatePlane.cpp  KDChartChart.cpp  KDChartDataValueAttributes.cpp  KDChartDataValueAttributes.h  KDChartLegend.cpp  KDChartModelDataCache_p.h  KDChartPieDiagram.cpp  KDChartPlotter.cpp  KDChartPlotter.h  KDChartPlotter_p.h  KDChartStackedPlotter_p.cpp
kdchart/src/KDChart/: CMakeLists.txt  ChartGraphicsItem.cpp  ChartGraphicsItem.h  KDChartAbstractArea.cpp  KDChartAbstractAreaBase.cpp  KDChartAbstractAreaBase.h  KDChartAbstractAreaBase_p.h  KDChartAbstractAreaWidget.cpp  KDChartAbstractAreaWidget.h  KDChartAbstractAreaWidget_p.h  KDChartAbstractArea_p.h  KDChartAbstractAxis.cpp  KDChartAbstractAxis_p.h  KDChartAbstractCoordinatePlane.cpp  KDChartAbstractCoordinatePlane.h  KDChartAbstractCoordinatePlane_p.h  KDChartAbstractDiagram.cpp  KDChartAbstractDiagram.h  KDChartAbstractDiagram_p.cpp  KDChartAbstractDiagram_p.h  KDChartAbstractGrid.cpp  KDChartAbstractGrid.h  KDChartAbstractProxyModel.cpp  KDChartAbstractThreeDAttributes.cpp  KDChartAbstractThreeDAttributes_p.h  KDChartAttributesModel.cpp  KDChartAttributesModel.h  KDChartBackgroundAttributes.cpp  KDChartChart.cpp  KDChartChart.h  KDChartChart_p.h  KDChartDataValueAttributes.cpp  KDChartDatasetProxyModel.cpp  KDChartDatasetProxyModel.h  KDChartDatasetSelector.cpp  KDChartDiagramObserver.cpp  KDChartDiagramObserver.h  KDChartEnums.h  KDChartFrameAttributes.cpp  KDChartGlobal.h  (+46 more)
kdchart/src/KDChart/Cartesian/: CartesianCoordinateTransformation.h  KDChartAbstractCartesianDiagram.cpp  KDChartAbstractCartesianDiagram.h  KDChartAbstractCartesianDiagram_p.h  KDChartBarAttributes.cpp  KDChartBarDiagram.cpp  KDChartBarDiagram.h  KDChartBarDiagram_p.cpp  KDChartBarDiagram_p.h  KDChartCartesianAxis.cpp  KDChartCartesianAxis.h  KDChartCartesianAxis_p.h  KDChartCartesianCoordinatePlane.cpp  KDChartCartesianCoordinatePlane.h  KDChartCartesianCoordinatePlane_p.h  KDChartCartesianDiagramDataCompressor_p.cpp  KDChartCartesianDiagramDataCompressor_p.h  KDChartCartesianGrid.cpp  KDChartLeveyJenningsAxis.cpp  KDChartLeveyJenningsAxis.h  KDChartLeveyJenningsAxis_p.h  KDChartLeveyJenningsCoordinatePlane.cpp  KDChartLeveyJenningsCoordinatePlane.h  KDChartLeveyJenningsCoordinatePlane_p.h  KDChartLeveyJenningsDiagram.cpp  KDChartLeveyJenningsDiagram.h  KDChartLeveyJenningsDiagram_p.cpp  KDChartLeveyJenningsDiagram_p.h  KDChartLeveyJenningsGrid.cpp  KDChartLeveyJenningsGrid.h  KDChartLeveyJenningsGridAttributes.cpp  KDChartLeveyJenningsGridAttributes.h  KDChartLineDiagram.cpp  KDChartLineDiagram.h  KDChartLineDiagram_p.cpp  KDChartLineDiagram_p.h  KDChartPlotter.cpp  KDChartPlotter.h  KDChartPlotterDiagramCompressor.cpp  KDChartPlotterDiagramCompressor.h  (+12 more)
kdchart/src/KDChart/Polar/: KDChartAbstractPieDiagram.cpp  KDChartAbstractPieDiagram.h  KDChartAbstractPieDiagram_p.h  KDChartAbstractPolarDiagram.cpp  KDChartAbstractPolarDiagram_p.h  KDChartPieAttributes.cpp  KDChartPieAttributes_p.h  KDChartPieDiagram.cpp  KDChartPieDiagram.h  KDChartPieDiagram_p.h  KDChartPolarCoordinatePlane.cpp  KDChartPolarCoordinatePlane_p.h  KDChartPolarDiagram.cpp  KDChartPolarDiagram.h  KDChartPolarDiagram_p.h  KDChartPolarGrid.cpp  KDChartRadarCoordinatePlane.cpp  KDChartRadarCoordinatePlane_p.h  KDChartRadarDiagram.cpp  KDChartRadarDiagram_p.h  KDChartRadarGrid.cpp  KDChartRadarGrid.h  KDChartRingDiagram.cpp  KDChartRingDiagram_p.h  KDChartThreeDPieAttributes.cpp  KDChartThreeDPieAttributes_p.h
kdchart/src/KDChart/Ternary/: KDChartAbstractTernaryDiagram.cpp  KDChartAbstractTernaryDiagram_p.h  KDChartTernaryAxis.cpp  KDChartTernaryAxis.h  KDChartTernaryCoordinatePlane.cpp  KDChartTernaryCoordinatePlane.h  KDChartTernaryCoordinatePlane_p.h  KDChartTernaryGrid.cpp  KDChartTernaryLineDiagram.cpp  KDChartTernaryLineDiagram_p.h  KDChartTernaryPointDiagram.cpp  KDChartTernaryPointDiagram_p.h  TernaryConstants.cpp  TernaryConstants.h  TernaryPoint.cpp  (+1 more)
massifdata/: CMakeLists.txt  datamodel.cpp  datamodel.h  filedata.cpp  filedata.h  mallocinfoparser.cpp  mallocinfoparser.h  massifdata_export.h  massifparser.cpp  massifparser.h  parser.cpp  parser.h  parserbase.cpp  parserbase.h  parserprivate.cpp  parserprivate.h  parsethread.cpp  parsethread.h  parseworker.cpp  parseworker.h  snapshotitem.cpp  snapshotitem.h  treeleafitem.cpp  treeleafitem.h  util.cpp  util.h
test/: CMakeLists.txt  datamodeltest.cpp  datamodeltest.h  massifparser.cpp  modeltest.cpp  modeltest.h
test/data/: massif.out.32406  massif.out.duchainify.bz2  massif.out.huge  massif.out.kate  massif.out.kate.print  massif.out.kate2  massif.out.kate3  massif.out.ktorrent  massif.out.stack
visualizer/: CMakeLists.txt  allocatorsmodel.cpp  allocatorsmodel.h  costmodel.cpp  costmodel.h  datatreemodel.cpp  datatreemodel.h  detailedcostmodel.cpp  detailedcostmodel.h  dotgraphgenerator.cpp  dotgraphgenerator.h  filtereddatatreemodel.cpp  filtereddatatreemodel.h  flamegraph.cpp  flamegraph.h  modelitem.h  totalcostmodel.cpp  totalcostmodel.h  util.cpp  util.h  visualizer_export.h
(+255 files in other folders)
